[package]
name = "tokenizer"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.7.9"
directories = "5.0.1"
get_user_input = "0.1.1"
open = "5.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["sync", "macros", "rt-multi-thread"] }
